[project]
name = "deepagent-wiki-code"
version = "0.1.0"
description = "LangChain / LangGraph / Deep Agent example collection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2",
    "langgraph>=1.1",
    "deepagents>=0.5",
    "langchain-anthropic>=1.4",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
extend-select = [
    "I",   # isort-compatible imports
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PTH", # pathlib over os.path
]
ignore = [
    "E501", # line length; formatter + line-length handle wrapping
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]
